--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					<div>
 						<button id="send">
 							Send
-						</button>
+						</button><span id="sendSubText">We will be in touch in a day or two.</span>
 					</div>
 					<div class="info"><p id="privacy" >Privacy Policy &amp; Terms of Use</p>
 					</div>
